<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="none"
    android:fillViewport="true"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_type_24dp"
            android:gravity="center"
            android:text="@string/tag_type"
            android:textColor="@color/colorTag"
            android:textSize="18sp" />

        <cn.flyexp.douban_movie.assistview.MyRecyclerView
            android:id="@+id/rv_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_country_24dp"
            android:gravity="center"
            android:text="@string/tag_country"
            android:textColor="@color/colorTag"
            android:textSize="18sp" />

        <cn.flyexp.douban_movie.assistview.MyRecyclerView
            android:id="@+id/rv_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_artist_24dp"
            android:gravity="center"
            android:text="@string/tag_artist"
            android:textColor="@color/colorTag"
            android:textSize="18sp" />

        <cn.flyexp.douban_movie.assistview.MyRecyclerView
            android:id="@+id/rv_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_year_24dp"
            android:gravity="center"
            android:text="@string/tag_year"
            android:textColor="@color/colorTag"
            android:textSize="18sp" />

        <cn.flyexp.douban_movie.assistview.MyRecyclerView
            android:id="@+id/rv_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
