<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/srl_movie_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.flyexp.douban_movie.view.activity.MovieDetailActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_movie_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/iv_movie_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar_movie_detail"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <LinearLayout
                android:id="@+id/ll_movie_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_movie_detail_year"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/detail_year"
                                android:textColor="@color/colorMovieText1"
                                android:textSize="17sp" />

                            <TextView
                                android:id="@+id/tv_movie_detail_country"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:text="@string/detail_country"
                                android:textColor="@color/colorMovieText1"
                                android:textSize="17sp" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/tv_movie_detail_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/detail_type"
                            android:textColor="@color/colorMovieText1"
                            android:textSize="17sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_movie_detail_average"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/average"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/detail_director" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_movie_detail_director"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:overScrollMode="never"
                    android:scrollbars="none" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/detail_cast" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_movie_detail_cast"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:overScrollMode="never"
                    android:scrollbars="none" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/summary" />

                <TextView
                    android:id="@+id/rv_movie_detail_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:lineSpacingExtra="5dp"
                    android:paddingBottom="10dp"
                    android:text="@string/detail_summary"
                    android:textColor="@color/colorMovieText1"
                    android:textSize="16sp" />
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>
</android.support.v4.widget.SwipeRefreshLayout>
